# alpha-labs

./: .env.example  .gitignore  BRANCHING.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  __main__.py  cli.py  docker-compose.prod.yml  docker-compose.yml  mcp_server.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-04-14T15-11-59-929Z.yml  page-2026-04-14T15-13-32-392Z.yml  page-2026-04-14T15-16-59-808Z.yml  page-2026-04-14T15-18-06-454Z.yml  page-2026-04-14T15-19-47-446Z.yml  page-2026-04-14T15-25-04-746Z.yml  page-2026-04-14T15-28-30-692Z.yml
agents/: chat.py  graph.py  nodes.py  scheduler.py  state.py
agents/specialists/: __init__.py  research_director.py  the_contrarian.py  the_fundamentalist.py  the_macro_strategist.py  the_quant.py  the_sentiment_analyst.py  the_technician.py
analytics/: __init__.py  factors.py  filters.py  microstructure.py  options.py  returns.py  signal_decay.py  statistics.py  structural_breaks.py
api/: agent_routes.py  auth_routes.py  chat_routes.py  config_agent_routes.py  cron_routes.py  cycle_routes.py  events.py  job_routes.py  mcp_server.py  server.py  settings_routes.py  skill_routes.py  universe_routes.py  voice_routes.py
auth/: __init__.py  dependencies.py  schemas.py  service.py
backtest/: execution_model.py  validation.py
backtest/engine/: __init__.py  vectorized.py
backtest/reports/: __init__.py  tearsheet.py
config/: settings.py
core/: __init__.py  adapters.py  backtest.py  connectors.py  features.py  llm.py  orchestrator.py  risk.py  serialization.py  strategies.py  utils.py
dashboard/: Dockerfile  package-lock.json  package.json
data/: universe.json
data/fetchers/: __init__.py  edgar_connector.py  fred_connector.py  yfinance_connector.py
data/storage/: __init__.py  store.py
db/: __init__.py  models.py  seed.py  session.py
docs/: 00-genesis-conversation.md  01-week1-implementation.md  02-architecture-decisions.md  03-market-analysis.md  04-week2-implementation.md  05-week3-implementation.md  06-week4-implementation.md  07-week5-implementation.md  08-week6-implementation.md  09-week7-implementation.md  10-adr-agent-native.md  11-vision-next-level.md  12-refined-vision.md  13-living-lab-roadmap.md  afml-doubt-explainer.md  demo-script.md  ldp-afml-alpha-lab-integration.md  pedersen-doubt-explainer.md  pedersen-math-companion.md  research-papers.md
docs/papers/: README.md
docs/prompts/: README.md  portfolio_architect.md  research_director.md  risk_manager.md  the_contrarian.md  the_fundamentalist.md  the_macro_strategist.md  the_quant.md  the_sentiment_analyst.md  the_technician.md
docs/requirements/: 0-base.txt  0-deploy.txt
docs/roadmap/: cqf-self-study-guide.md  integrated-curriculum.md  quant-researcher-head-of-ai.md  senior-quant-researcher-curriculum.md  singapore-education-analysis.md  singapore-recruiters-outreach.md
docs/tutorial/: architecture-and-dataflow.md  reading-order.md
execution/algorithms/: paper_trader.py  vwap_twap.py
features/: store.py
features/technical/: __init__.py  frac_diff.py  indicators.py  momentum.py  spread.py  zscore.py
jobs/: __init__.py  base.py  cron.py  models.py  registry.py  threadpool_runner.py  wrapper.py
models/: __init__.py
models/inference/: __init__.py  signal_generator.py
models/nlp_signals/: __init__.py  base.py  finbert_model.py  loughran_mcdonald.py  signal_pipeline.py
risk/: manager.py
scripts/: prefetch_demo_data.py
strategies/: combiner.py
tests/: conftest.py  test_agent_routes.py  test_agents.py  test_analytics_returns.py  test_analytics_statistics.py  test_api_server.py  test_backtest_validation.py  test_bet_sizing.py  test_circuit_breaker.py  test_combiner.py  test_core_registries.py  test_cross_validation.py  test_document_processor.py  test_execution_algorithms.py  test_execution_model.py  test_factors.py  test_feature_importance.py  test_feature_store.py  test_filters.py  test_frac_diff.py  test_indicators.py  test_labeling.py  test_llm.py  test_mcp_tools.py  test_mean_reversion_strategy.py  test_microstructure.py  test_ml_signal_generator.py  test_momentum.py  test_monte_carlo_var.py  test_nlp_signal_pipeline.py  test_options.py  test_orchestrator.py  test_portfolio_optimization.py  test_position_sizing.py  test_rag_pipeline.py  test_report_generator.py  test_research_director.py  test_risk_manager.py  test_sentiment.py  test_signal_decay.py  (+8 more)
voice/: __init__.py  pipeline.py
(+63 files in other folders)
