[project]
name = "quant-researcher"
version = "0.1.0"
description = "AI-powered quant research platform"
requires-python = ">=3.11"
dependencies = [
    # Data
    "yfinance>=0.2.36",
    "fredapi>=0.5.2",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "duckdb>=1.0.0",
    "pyarrow>=15.0.0",
    "httpx>=0.27.0",

    # Numerical / Stats
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "arch>=7.0.0",  # GARCH models

    # ML
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",

    # Visualization
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "streamlit>=1.32.0",

    # LLM / NLP
    "anthropic>=0.40.0",
    "tiktoken>=0.6.0",

    # Backtesting
    "quantstats>=0.0.62",

    # Portfolio
    "pyportfolioopt>=1.5.5",
    "riskfolio-lib>=6.0.0",

    # Vector Store (for LLM research pipeline)
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "data*", "analytics*", "features*", "strategies*", "models*", "risk*", "portfolio*", "execution*", "backtest*", "research*", "dashboard*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
