[project]
name = "quant-researcher"
version = "0.1.0"
description = "AI-powered quant research platform — The Agentic Alpha Lab"
requires-python = ">=3.12"
dependencies = [
    # Data
    "yfinance>=1.2.0",
    "fredapi>=0.5.2",
    "pandas>=3.0.0",
    "polars>=1.39.0",
    "duckdb>=1.5.0",
    "pyarrow>=18.0.0",
    "httpx>=0.27.0",

    # Numerical / Stats
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "arch>=7.0.0",

    # ML
    "scikit-learn>=1.8.0",
    "lightgbm>=4.6.0",
    "xgboost>=3.2.0",

    # Visualization
    "matplotlib>=3.9.0",
    "plotly>=6.0.0",
    "streamlit>=1.56.0",
    "dash>=3.0.0",

    # LLM / NLP
    "anthropic>=0.89.0",

    # Backtesting
    "quantstats>=0.0.62",
    "vectorbt>=0.28.5",
    "nautilus_trader>=1.225.0",

    # Portfolio
    "pyportfolioopt>=1.5.5",
    "riskfolio-lib>=7.0.0",

    # Vector Store
    "lancedb>=0.30.0",

    # Agent Orchestration
    "langgraph>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
    "marimo>=0.22.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "data*", "analytics*", "features*", "strategies*", "models*", "risk*", "portfolio*", "execution*", "backtest*", "research*", "dashboard*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
