[tool.poetry]
name = "quant-researcher"
version = "0.1.0"
description = "AI-powered quant research platform — The Agentic Alpha Lab"
authors = ["Parul Juniwal"]
readme = "ROADMAP.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

# Data
yfinance = "^1.2.0"
fredapi = "^0.5.2"
pandas = "^3.0.0"
polars = "^1.39.0"
duckdb = "^1.5.0"
pyarrow = ">=18.0.0"
httpx = "^0.27.0"

# Numerical / Stats
numpy = "^2.0.0"
scipy = "^1.14.0"
statsmodels = "^0.14.0"
arch = "^7.0.0"

# ML
scikit-learn = "^1.8.0"
lightgbm = "^4.6.0"
xgboost = "^3.2.0"

# Visualization (backend — for tear sheets and quick analysis)
matplotlib = "^3.9.0"
plotly = "^6.0.0"

# LLM / NLP
anthropic = "^0.89.0"

# Backtesting
quantstats = ">=0.0.62"
# vectorbt = ">=0.28.5"  # Disabled: requires pandas <3.0
# nautilus_trader = {version = "^1.225.0", python = ">=3.12,<3.15"}  # Disabled: requires pandas <3.0

# Portfolio
pyportfolioopt = "^1.5.5"
riskfolio-lib = "^7.0.0"

# Vector Store
lancedb = "^0.30.0"

# Agent Orchestration
langgraph = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.11.0"
marimo = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
